tests/transpiler/x/java/pure_global_fold.error
exit status 1
Main.java:5: error: non-static variable k cannot be referenced from a static context
        return x + k;
                   ^
1 error
