tests/transpiler/x/java/pure_global_fold.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:19 UTC
public class Main {
    static int inc(int x) {
        return x + k;
    }
    public static void main(String[] args) {
        var k = 2;
        System.out.println((inc(3) == null ? "nil" : inc(3)));
    }
}
